--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^7.8.0",
+    "@typescript-eslint/parser": "^7.8.0",
     "discord.js": "^14.14.1",
     "pino": "^9.0.0",
     "pino-pretty": "^11.0.0",
+    "prettier": "^3.2.5",
     "prisma": "^5.13.0"
   }
 }
