--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^7.8.0",
     "@typescript-eslint/parser": "^7.8.0",
+    "axios": "^1.6.8",
     "discord.js": "^14.14.1",
+    "node-schedule": "^2.1.1",
     "pino": "^9.0.0",
     "pino-pretty": "^11.0.0",
     "prettier": "^3.2.5",
